cabal-version:      2.4
name:               sparse-set
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Reitinger Simon
maintainer:         simre4775@gmail.com

-- A copyright notice.
-- copyright:
category:           Data
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        SparseSet.Boxed
        SparseSet.NoComponent
        SparseSet.Storable
        SparseSet.Storable2
        SparseSet.StorableBoxed

        SparseSet.Unboxed
        SparseSet.NextId.NoComponent
        SparseSet.Mutable
    build-depends:    
        base ^>=4.16.0.0,
        vector,
        mutable-containers
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options: -O2

test-suite sparse-set-test
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    build-depends:    base ^>=4.16.0.0, tasty, tasty-hunit, sparse-set
