cabal-version:      2.4
name:               sparse-set
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage: https://github.com/Simre1/sparse-set

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Reitinger Simon
maintainer:         simre4775@gmail.com

-- A copyright notice.
-- copyright:
category:           Data
extra-source-files:
  CHANGELOG.md,
  README.md

library
    exposed-modules:

        Data.SparseSet.Storable
        Data.SparseSet.Boxed
        Data.SparseSet.NextId.NoComponent
    build-depends:
        base >=4.14.0.0,
        vector,
        mutable-containers,
        optics-core
    hs-source-dirs:   src
    default-extensions:
      BangPatterns
      ConstraintKinds
      DeriveGeneric
      DerivingStrategies
      DuplicateRecordFields
      NoFieldSelectors
      FlexibleContexts
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      KindSignatures
      LambdaCase
      OverloadedStrings
      TypeApplications
      RankNTypes
      ScopedTypeVariables
      TypeFamilies
      MultiParamTypeClasses
      OverloadedLabels
    
test-suite sparse-set-test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    build-depends:
      base >=4.14.0.0,
      sparse-set,
      tasty,
      tasty-bench,
      tasty-hunit,
      transformers
    default-extensions:
      ApplicativeDo
      BangPatterns
      BlockArguments
      ConstraintKinds
      DeriveGeneric
      DerivingStrategies
      DuplicateRecordFields
      FlexibleContexts
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      KindSignatures
      LambdaCase
      OverloadedStrings
      PatternSynonyms
      RecordWildCards
      StrictData
      TypeApplications
